changed explore spaces list layout to grid from flex box to fix alignment of single item in a row

--- a/src/index.css
+++ b/src/index.css
@@ -218,23 +218,22 @@ footer{
     padding-inline: 30px;
     margin: 20px 0;
     background: #FFF7ED;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .space-list {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    row-gap: 15px;
     margin-top: 57px;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+    grid-auto-rows: 1fr;
+    gap: 15px;
 }
 
 .explore-space-link {
     text-decoration: none;
     color: initial;
-    width: fit-content;
-    max-width: 30%;
-    min-width: 300px;
-    margin-bottom: 15px;
 }
 
 a {
@@ -250,8 +249,11 @@ a {
 
 .space-tile img {
     max-width: 100%;
+    height: 100%;
+    object-fit: cover;
     border-radius: 7px;
     margin-bottom: 10px;
+    aspect-ratio: 4/2.5;
 }
 
 .space-list-container button {
@@ -590,7 +592,7 @@ i[class*='space-type-'] {
     flex-direction: column;
     align-content: flex-start;
     justify-content: flex-start;
-    row-gap: 10px;
+    row-gap: 18px;
 }
 
 .host-space-info-title{
